# starlingrt

./: CITATION.cff  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: conf.py  demo.rst  examples.rst  index.rst  install.rst  make_docs.sh  modules.rst  requirements.in  requirements.txt  starlingrt.rst  tutorial.rst
docs/_static/: README.md  example.ipynb  example.py  sample.ipynb
docs/jupyter/: mass_hunter.ipynb
my_package/: __init__.py
starlingrt/: __init__.py  data.py  example.py  functions.py  load.py  sample.py  visualize.py
tests/: __init__.py  test_example.py  test_types.py
