# Refer to: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# For pytest: https://docs.pytest.org/en/stable/reference/customize.html
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
# version = "0.0.0"
name = "my_package"
description="My Awesome New Package"
authors = [
    {name = "Nathan A. Mahynski", email = "nathan.mahynski@gmail.com"}
]
maintainers = [
    {name = "Nathan A. Mahynski", email = "nathan.mahynski@gmail.com"}
]
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "IPython",
    "ipywidgets",
    "matplotlib==3.7.2",
    "numpy==1.26.4",
    "pandas==2.1.4",  # For Colab
    "pre-commit==3.3.3",
    "scikit-learn==1.3.0",
    "scipy==1.11.1",
    "seaborn==0.12.2",
    "tqdm==4.66.1",
    "watermark==2.4.3",
    "pytest==7.4.0",
    "missingno==0.5.2",
    "wandb>=0.17.5",
] 

[project.optional-dependencies]
all = []

[tool.pytest.ini_options]
testpaths = [ 
    "tests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_package*"]

[tool.setuptools.dynamic]
version = {attr = "my_package.__version__"}

[project.urls]
Repository = "https://github.com/mahynski/my_package.git"
Documentation = "https://my_package.readthedocs.io/"
Issues = "https://github.com/mahynski/my_package/issues"
